Fix overflowing exceptions

--- a/src/stylesheets/diagnostics.scss
+++ b/src/stylesheets/diagnostics.scss
@@ -65,12 +65,17 @@
   // Individual timestamp
   .timestamp-holder {
     // Timestamp info inside panel body
-    .panel .panel-body ul li {
-      border-bottom: none;
+    .panel .panel-body ul {
+      padding: 0;
+      li {
+        border-bottom: none;
+        max-width: none;
+      }
       .exception {
         border-color: $red-tint;
         background: $red-error;
         box-shadow: inset 0 .5px .5px $red-tint;
+        overflow-x: scroll;
       }
       pre {
         border: none;
